objects/IdMatrix_Shared_Fraud_Phone_Number__c.object
<CustomObject>
    <fields>
        <fullName>IdMatrix_Shared_Fraud_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IdMatrix Shared Fraud Record</label>
        <referenceTo>IdMatrix_Shared_Fraud_Record__c</referenceTo>
        <relationshipLabel>IdMatrix Shared Fraud Phone Number</relationshipLabel>
        <relationshipName>IdMatrix_Shared_Fraud_Phone_Number</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix Shared Fraud Phone Number</label>
    <nameField>
        <label>Shared Fraud Phone Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Shared Fraud Phone Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>